--- a/provisioning/roles/ruby/tasks/main.yml
+++ b/provisioning/roles/ruby/tasks/main.yml
@@ -4,7 +4,12 @@
   sudo: yes
   tags: ruby
 
+- name: install rubygems
+  apt: name=rubygems state=present
+  sudo: yes
+  tags: ruby
+
 - name: Ruby | Install compass gem
-  gem: name=compass
+  command: gem install compass
   sudo: yes
   tags: ruby
